# nexus_4wd_mecanum_simulator

nexus_4wd_mecanum_description/urdf/: nexus_4wd_mecanum.gazebo  nexus_4wd_mecanum.xacro  urm04_sensor.xacro
nexus_4wd_mecanum_gazebo/: CMakeLists.txt  package.xml
nexus_4wd_mecanum_gazebo/include/nexus_4wd_mecanum_gazebo/: nexus_ros_force_based_move.h
nexus_4wd_mecanum_gazebo/launch/: nexus_4wd_mecanum_world.launch  spawn_one_nexus_4wd_mecanum.launch
nexus_4wd_mecanum_gazebo/maps/: willow-2010-02-18-0.10.yaml
nexus_4wd_mecanum_gazebo/src/: nexus_ros_force_based_move.cpp
nexus_4wd_mecanum_gazebo/srv/: SetStatus.srv
